# test_ncurses

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  snake
include/: board.hpp  drawable.hpp  snake.hpp  snake_game.hpp
src/: board.cpp  drawable.cpp  main.cpp  snake.cpp  snake_game.cpp
